[gd_scene load_steps=2 format=3 uid="uid://be5ceayhyurry"]

[ext_resource type="Script" path="res://Scripts/UI/settins.gd" id="1_drky1"]

[node name="Settins" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_drky1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
offset_left = 1920.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="SettingsHeader" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "SETTINGS_0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="VideoHeader" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "VIDEO_SETTINGS_0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VideoSettings" type="GridContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ScreenResolution" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "SCREEN_RESOLUTION_0"
vertical_alignment = 1

[node name="ScreenResolutionOptions" type="OptionButton" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
focus_neighbor_top = NodePath("../../HBoxContainer/ExitButton")
focus_neighbor_bottom = NodePath("../WindowModeOptions")
theme_type_variation = &"CustomOptionButton"
alignment = 1
item_count = 6
selected = 0
fit_to_longest_item = false
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "3440x1440"
popup/item_2/id = 2
popup/item_3/text = "1440x1080"
popup/item_3/id = 3
popup/item_4/text = "1924x768"
popup/item_4/id = 4
popup/item_5/text = "800x600"
popup/item_5/id = 5

[node name="WindowMode" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "WINDOW_MODE_0"
vertical_alignment = 1

[node name="WindowModeOptions" type="OptionButton" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
focus_neighbor_top = NodePath("../ScreenResolutionOptions")
focus_neighbor_bottom = NodePath("../../VolumeSettings/HBoxContainer/MasterVolume")
theme_type_variation = &"CustomOptionButton"
disabled = true
alignment = 1
item_count = 2
selected = 0
fit_to_longest_item = false
popup/item_0/text = "WINDOW_MODE_WINDOWED"
popup/item_0/id = 0
popup/item_1/text = "WINDOW_MODE_FULLSCREEN"
popup/item_1/id = 1

[node name="VolumeHeader" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "VOLUME_SETTINGS_0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer6" type="Control" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeSettings" type="GridContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/v_separation = 20
columns = 2

[node name="Master" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 6.0
text = "MASTER_VOLUME_0"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2

[node name="MasterVolume" type="HSlider" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
focus_neighbor_top = NodePath("../../../VideoSettings/WindowModeOptions")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/DialogVolume")
rounded = true

[node name="Spacer7" type="Control" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MasterVolumeValueValue" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "
"
vertical_alignment = 1

[node name="Dialog" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 6.0
text = "DIALOG_VOLUME_0"
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2

[node name="DialogVolume" type="HSlider" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
focus_neighbor_top = NodePath("../../HBoxContainer/MasterVolume")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/MusicVolume")

[node name="Spacer8" type="Control" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DialogVolumeValue" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../HBoxContainer/MasterVolume")
focus_neighbor_bottom = NodePath("../../HBoxContainer3/MusicVolume")
text = "
"
vertical_alignment = 1

[node name="Music" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 6.0
text = "MUSIC_VOLUME_0"
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2

[node name="MusicVolume" type="HSlider" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
focus_neighbor_top = NodePath("../../HBoxContainer2/DialogVolume")
focus_neighbor_bottom = NodePath("../../HBoxContainer4/SoundEffectsVolume")

[node name="Spacer9" type="Control" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer3"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MusicVolumeValue" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "
"
vertical_alignment = 1

[node name="SoundEffects" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 6.0
text = "SFX_VOLUME_0"
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SoundEffectsVolume" type="HSlider" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
focus_neighbor_top = NodePath("../../HBoxContainer3/MusicVolume")
focus_neighbor_bottom = NodePath("../../../LanguageSettings/LanguageOptions")

[node name="Spacer10" type="Control" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer4"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="SFXVolumeValue" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "
"
vertical_alignment = 1

[node name="Spacer5" type="Control" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="LanguageHeader" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "LANGUAGE_SETTINGS_0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer4" type="Control" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="LanguageSettings" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Language" type="Label" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/LanguageSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "LANGUAGE_SETTINGS_1"
vertical_alignment = 1

[node name="LanguageOptions" type="OptionButton" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/LanguageSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
focus_neighbor_top = NodePath("../../VolumeSettings/HBoxContainer4/SoundEffectsVolume")
focus_neighbor_bottom = NodePath("../../HBoxContainer/ExitButton")
theme_type_variation = &"CustomOptionButton"
disabled = true
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "ENGLISH_0"
popup/item_0/id = 0
popup/item_1/text = "UKRAINIAN_0"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ExitButton" type="Button" parent="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
focus_neighbor_top = NodePath("../../LanguageSettings/LanguageOptions")
focus_neighbor_bottom = NodePath("../../VideoSettings/ScreenResolutionOptions")
theme_type_variation = &"DialogButton"
disabled = true
text = "EXIT_0"

[node name="Spacer2" type="Control" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="focus_entered" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings/ScreenResolutionOptions" to="." method="_on_screen_resolution_options_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings/ScreenResolutionOptions" to="." method="_on_screen_resolution_options_focus_exited"]
[connection signal="item_selected" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings/ScreenResolutionOptions" to="." method="_on_screen_resolution_options_item_selected"]
[connection signal="focus_entered" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings/WindowModeOptions" to="." method="_on_window_mode_options_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings/WindowModeOptions" to="." method="_on_window_mode_options_focus_exited"]
[connection signal="item_selected" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VideoSettings/WindowModeOptions" to="." method="_on_window_mode_options_item_selected"]
[connection signal="drag_ended" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer/MasterVolume" to="." method="_on_master_volume_drag_ended"]
[connection signal="focus_exited" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer/MasterVolume" to="." method="_on_master_volume_focus_exited"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="focus_exited" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer2/DialogVolume" to="." method="_on_dialog_volume_focus_exited"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer2/DialogVolume" to="." method="_on_dialog_volume_value_changed"]
[connection signal="focus_exited" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer3/MusicVolume" to="." method="_on_music_volume_focus_exited"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer3/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="focus_exited" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer4/SoundEffectsVolume" to="." method="_on_sound_effects_volume_focus_exited"]
[connection signal="value_changed" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/VolumeSettings/HBoxContainer4/SoundEffectsVolume" to="." method="_on_sound_effects_volume_value_changed"]
[connection signal="focus_entered" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/LanguageSettings/LanguageOptions" to="." method="_on_language_options_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/LanguageSettings/LanguageOptions" to="." method="_on_language_options_focus_exited"]
[connection signal="item_selected" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/LanguageSettings/LanguageOptions" to="." method="_on_language_options_item_selected"]
[connection signal="focus_entered" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_focus_exited"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
